chore: remove unused feature
